[lib]
proc_macro = true

[package]
name = "form-yew"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "a macro to help with forms in yew"
homepage = "https://github.com/sasacocic/yew_form_derive"
documentation = "https://github.com/sasacocic/yew_form_derive"
repository = "https://github.com/sasacocic/yew_form_derive"
readme = "readme.md"
keywords = ["yew", "form"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.46"
quote = "1.0.21"
syn = "1.0.101"
yew = "0.19.3"
